--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent any
+    tools {
+        maven 'Maven 3.9.2' // Use the name you configured in Global Tool Configuration
+    }
     stages {
         stage('Build') {
             steps {
