--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
         }
         stage('Complete') {
             steps {
-                sh 'echo job complete'
+                sh 'echo "job complete new branch"'
             }
         }
     }
